@@ -1,4 +1,4 @@
-#	$OpenBSD: Makefile,v 1.36 2005/03/04 08:48:46 djm Exp $
+#	$OpenBSD: Makefile,v 1.42 2006/07/19 13:34:52 dtucker Exp $
 
 REGRESS_TARGETS=	t1 t2 t3 t4 t5 t6 t7 t-exec
 tests:		$(REGRESS_TARGETS)
@@ -40,7 +40,9 @@ LTESTS= 	connect \
 		forwarding \
 		multiplex \
 		reexec \
-		brokenkeys
+		brokenkeys \
+		cfgmatch \
+		forcecommand
 
 USER!=		id -un
 CLEANFILES=	t2.out t6.out1 t6.out2 t7.out t7.out.pub copy.1 copy.2 \
@@ -49,8 +51,8 @@ CLEANFILES=	t2.out t6.out1 t6.out2 t7.out t7.out.pub copy.1 copy.2 \
 		rsa.pub rsa rsa1.pub rsa1 host.rsa host.rsa1 \
 		rsa-agent rsa-agent.pub rsa1-agent rsa1-agent.pub \
 		ls.copy banner.in banner.out empty.in \
-		scp-ssh-wrapper.scp ssh_proxy_envpass \
-		remote_pid
+		scp-ssh-wrapper.scp ssh_proxy_envpass remote_pid \
+		sshd_proxy_bak rsa_ssh2_cr.prv rsa_ssh2_crnl.prv
 
 #LTESTS +=	ssh-com ssh-com-client ssh-com-keygen ssh-com-sftp
 
